--- a/Jpa Assignment-2/Jpa-Assignment-2/build.gradle
+++ b/Jpa Assignment-2/Jpa-Assignment-2/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 
-group = 'com.springdata'
+group = 'com.jpaassignment-2'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
